--- a/source/form.html
+++ b/source/form.html
@@ -24,7 +24,7 @@
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
           <a class="site-list__link" href="index.html">Главная</a>
-          <a class="site-list__button" href="#"><img src="" width="" height="" alt="Закрыть меню"></a>
+          <button class="site-list__button" aria-label="Закрыть меню"></button>
         </li>
         <li class="site-list__item"><a class="site-list__link" href="photo.html">Фото и видео</a></li>
         <li class="site-list__item"><a class="site-list__link" href="form.html">Форма отзыва</a></li>
@@ -42,9 +42,9 @@
 
       <section class="reviews">
 
-        <div class="reviews__description reviews-description">
-          <h1 class="reviews-description__slogan">Оставьте свой отзыв</h1>
-          <p class="reviews-description__text">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
+        <div class="reviews__description">
+          <h1 class="reviews__description-slogan">Оставьте свой отзыв</h1>
+          <p class="reviews__description-text">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
         </div>
 
         <form class="reviews_form feedback" action="https://echo.htmlacademy.ru" method="get">
@@ -133,12 +133,12 @@
             </ul>
           </fieldset>
 
-          <div class="feedback__error-popup error-popup">
-            <h2 class="error-popup__title">Что-то пошло не так!</h2>
-            <p class="error-popup__description">
+          <div class="feedback__error">
+            <h2 class="feedback__error-title">Что-то пошло не так!</h2>
+            <p class="feedback__error-description">
               Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
             </p>
-            <a class="error-popup__link" href="">ок</a>
+            <a class="feedback__error-link" href="">ок</a>
           </div>
 
           <fieldset class="feedback__section emotions">
@@ -146,13 +146,13 @@
             <label><textarea class="emotions__input" name="message" rows="7" cols="35" placeholder="Опишите подробно все свои восторги"></textarea></label>
           </fieldset>
 
-          <div class="feedback__success-popup success-popup">
-            <h2 class="success-popup__title">Ваш отзыв отправлен!</h2>
-            <p class="success-popup__description">
+          <div class="feedback__success">
+            <h2 class="feedback__success-title">Ваш отзыв отправлен!</h2>
+            <p class="feedback__success-description">
               Спасибо за ваше участие, ваш<br> отзыв уже поступил к нам.<br> В ближайшее время мы<br> опубликуем его на сайте.
             </p>
-            <div class="success-popup__link-background">
-              <a class="success-popup__link" href="">Закрыть окно</a>
+            <div class="feedback__success-linkbg">
+              <a class="feedback__success-link" href="">Закрыть окно</a>
             </div>
           </div>
 
@@ -164,12 +164,12 @@
   <footer class="footer container">
     <a class="footer__hashtag" href="">#VISITSEDONA</a>
 
-    <div class="footer_social social">
+    <div class="footer__social">
       <h2 class="visually-hidden">Давайте дружить!</h2>
-      <ul class="social__list">
-        <li class="social__item"><a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a></li>
-        <li class="social__item"><a class="social__link social__link--facebook" href="#" aria-label="Фейсбук"></a></li>
-        <li class="social__item"><a class="social__link social__link--youtube" href="#" aria-label="Ютуб"></a></li>
+      <ul class="footer__social-list">
+        <li class="footer__social-item"><a class="footer__social-link footer__social-link--twitter" href="#" aria-label="Твиттер"></a></li>
+        <li class="footer__social-item"><a class="footer__social-link footer__social-link--facebook" href="#" aria-label="Фейсбук"></a></li>
+        <li class="footer__social-item"><a class="footer__social-link footer__social-link--youtube" href="#" aria-label="Ютуб"></a></li>
       </ul>
     </div>
 
