--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
           <a class="site-list__link" href="index.html">Главная</a>
-          <a class="site-list__button" href="#"><img src="" width="" height="" alt="Закрыть меню"></a>
+          <button class="site-list__button" aria-label="Закрыть меню"></button>
         </li>
         <li class="site-list__item"><a class="site-list__link" href="photo.html">Фото и видео</a></li>
         <li class="site-list__item"><a class="site-list__link" href="form.html">Форма отзыва</a></li>
@@ -121,12 +121,12 @@
   <footer class="footer container">
     <a class="footer__hashtag" href="">#VISITSEDONA</a>
 
-    <div class="footer_social social">
+    <div class="footer__social">
       <h2 class="visually-hidden">Давайте дружить!</h2>
-      <ul class="social__list">
-        <li class="social__item"><a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a></li>
-        <li class="social__item"><a class="social__link social__link--facebook" href="#" aria-label="Фейсбук"></a></li>
-        <li class="social__item"><a class="social__link social__link--youtube" href="#" aria-label="Ютуб"></a></li>
+      <ul class="footer__social-list">
+        <li class="footer__social-item"><a class="footer__social-link footer__social-link--twitter" href="#" aria-label="Твиттер"></a></li>
+        <li class="footer__social-item"><a class="footer__social-link footer__social-link--facebook" href="#" aria-label="Фейсбук"></a></li>
+        <li class="footer__social-item"><a class="footer__social-link footer__social-link--youtube" href="#" aria-label="Ютуб"></a></li>
       </ul>
     </div>
 
