--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -121,12 +122,18 @@
   <footer class="footer container">
     <a class="footer__hashtag" href="">#VISITSEDONA</a>
 
-    <div class="footer__social">
+    <div class="footer_social social">
       <h2 class="visually-hidden">Давайте дружить!</h2>
-      <ul class="footer__social-list">
-        <li class="footer__social-item"><a class="footer__social-link footer__social-link--twitter" href="#" aria-label="Твиттер"></a></li>
-        <li class="footer__social-item"><a class="footer__social-link footer__social-link--facebook" href="#" aria-label="Фейсбук"></a></li>
-        <li class="footer__social-item"><a class="footer__social-link footer__social-link--youtube" href="#" aria-label="Ютуб"></a></li>
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="#" aria-label="Фейсбук"></a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--youtube" href="#" aria-label="Ютуб"></a>
+        </li>
       </ul>
     </div>
 
