--- a/source/index.html
+++ b/source/index.html
@@ -74,7 +74,7 @@
           </div>
 
         <div class="advantages__item dignity">
-          <div class="dignity__group">
+          <div class="dignity__group dignity__group--bridge">
             <h2 class="dignity__title">Там есть мост дьявола</h2>
             <span class="dignity__number">- №2 -</span>
             <p class="dignity__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
@@ -83,7 +83,7 @@
         </div>
 
         <div class="advantages__item dignity">
-          <div class="dignity__group dignity__group--folded">
+          <div class="dignity__group dignity__group--folded dignity__group--area">
             <h2 class="dignity__title">Небольшая площадь</h2>
             <span class="dignity__number">- №3 -</span>
             <p class="dignity__text">Все интересные места находятся очень близко</p>
@@ -91,7 +91,7 @@
         </div>
 
         <div class="advantages__item dignity">
-          <div class="dignity__group dignity__group--folded">
+          <div class="dignity__group dignity__group--folded dignity__group--road">
             <h2 class="dignity__title">Красивая дорога</h2>
             <span class="dignity__number">- №4 -</span>
             <p class="dignity__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
@@ -99,7 +99,7 @@
         </div>
 
         <div class="advantages__item dignity">
-          <div class="dignity__group dignity__group--folded">
+          <div class="dignity__group dignity__group--folded dignity__group--tourists">
             <h2 class="dignity__title">Мало туристов</h2>
             <span class="dignity__number">- №5 -</span>
             <p class="dignity__text">Большинство едет в гранд каньон и толпится там</p>
