--- a/source/index.html
+++ b/source/index.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
-  <header class="header">
+  <header class="header container">
 
     <div class="header__logo logo">
       <a href="">
@@ -16,22 +18,23 @@
     </div>
 
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
+      <a class="main-nav__toggle" href="#">
         <img src="" width="" height="" alt="Открыть меню">
-      </button>
+      </a>
 
       <ul class="main-nav__list site-list">
-        <li class="site-list__item"><a href="index.html">Главная</a>
-          <button class="site-list__button"></button>
+        <li class="site-list__item">
+          <a class="site-list__link" href="index.html">Главная</a>
+          <button class="site-list__button" aria-label="Закрыть меню"></button>
         </li>
-        <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
-        <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
-        <li class="site-list__item"><a href="">HTML Academy</a></li>
+        <li class="site-list__item"><a class="site-list__link" href="photo.html">Фото и видео</a></li>
+        <li class="site-list__item"><a class="site-list__link" href="form.html">Форма отзыва</a></li>
+        <li class="site-list__item"><a class="site-list__link" href="">HTML Academy</a></li>
       </ul>
     </nav>
   </header>
 
-  <main class="main">
+  <main class="main container">
     <section class="intro">
 
       <div class="intro__background">
@@ -48,20 +51,22 @@
       <div class="advantages__list">
 
         <div class="advantages__item dignity">
-          <h2 class="dignity__title">Настоящий городок</h2>
-          <span class="dignity__number">- №1 -</span>
-          <p class="dignity__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          <img class="dignity__img" src="" width="" height="" alt="">
+          <div class="dignity__group">
+            <h2 class="dignity__title">Настоящий городок</h2>
+            <span class="dignity__number">- №1 -</span>
+            <p class="dignity__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          </div>
+          <img class="dignity__img" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="">
             <ul class="dignity__list">
-              <li class="dignity__item">
+              <li class="dignity__item dignity__item--housing">
                 <h3 class="dignity__item-title">Жилье</h3>
                 <p class="dignity__item-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
               </li>
-              <li class="dignity__item">
+              <li class="dignity__item dignity__item--souvenirs">
                 <h3 class="dignity__item-title">Сувениры</h3>
                 <p class="dignity__item-text">Не только китайского, но и местного производства!</p>
               </li>
-              <li class="dignity__item">
+              <li class="dignity__item dignity__item--hamburger">
                 <h3 class="dignity__item-title">Еда</h3>
                 <p class="dignity__item-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </li>
@@ -69,28 +74,36 @@
           </div>
 
         <div class="advantages__item dignity">
-          <h2 class="dignity__title">Там есть мост дьявола</h2>
-          <span class="dignity__number">- №2 -</span>
-          <p class="dignity__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          <img class="dignity__img" src="" width="" height="" alt="">
+          <div class="dignity__group dignity__group--bridge">
+            <h2 class="dignity__title">Там есть мост дьявола</h2>
+            <span class="dignity__number">- №2 -</span>
+            <p class="dignity__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          </div>
+          <img class="dignity__img" src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="">
         </div>
 
         <div class="advantages__item dignity">
-          <h2 class="dignity__title">Небольшая площадь</h2>
-          <span class="dignity__number">- №3 -</span>
-          <p class="dignity__text">Все интересные места находятся очень близко</p>
+          <div class="dignity__group dignity__group--folded dignity__group--area">
+            <h2 class="dignity__title">Небольшая площадь</h2>
+            <span class="dignity__number">- №3 -</span>
+            <p class="dignity__text">Все интересные места находятся очень близко</p>
+          </div>
         </div>
 
         <div class="advantages__item dignity">
-          <h2 class="dignity__title">Красивая дорога</h2>
-          <span class="dignity__number">- №4 -</span>
-          <p class="dignity__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <div class="dignity__group dignity__group--folded dignity__group--road">
+            <h2 class="dignity__title">Красивая дорога</h2>
+            <span class="dignity__number">- №4 -</span>
+            <p class="dignity__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </div>
         </div>
 
         <div class="advantages__item dignity">
-          <h2 class="dignity__title">Мало туристов</h2>
-          <span class="dignity__number">- №5 -</span>
-          <p class="dignity__text">Большинство едет в гранд каньон и толпится там</p>
+          <div class="dignity__group dignity__group--folded dignity__group--tourists">
+            <h2 class="dignity__title">Мало туристов</h2>
+            <span class="dignity__number">- №5 -</span>
+            <p class="dignity__text">Большинство едет в гранд каньон и толпится там</p>
+          </div>
         </div>
       </div>
     </section>
@@ -102,24 +115,30 @@
     </div>
 
     <div class="map">
-      <img class="map__img" src="" width="" height="" alt="">
+      <img class="map__img" src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="">
     </div>
   </main>
 
-  <footer class="page-footer">
-    <a class="page-footer__hashtag" href="">#VISITSEDONA</a>
+  <footer class="footer container">
+    <a class="footer__hashtag" href="">#VISITSEDONA</a>
 
-    <div class="page-footer_social social">
+    <div class="footer_social social">
       <h2 class="visually-hidden">Давайте дружить!</h2>
       <ul class="social__list">
-        <li class="social__item"><a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a></li>
-        <li class="social__item"><a class="social__link social__link--facebook" href="#" aria-label="Фейсбук"></a></li>
-        <li class="social__item"><a class="social__link social__link--youtube" href="#" aria-label="Ютуб"></a></li>
+        <li class="social__item">
+          <a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="#" aria-label="Фейсбук"></a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--youtube" href="#" aria-label="Ютуб"></a>
+        </li>
       </ul>
     </div>
 
-    <div class="page-footer__html-academy">
-      <p>Разработано <a href="https://htmlacademy.ru/intensive/adaptive"><img src="" width="" height="" alt="хтмл академия"></a></p>
+    <div class="footer__html-academy">
+      <p>Разработано <a class="footer__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="img/logo-htmlacademy.svg" width="26.9" height="34.1" alt="хтмл академия"></a></p>
     </div>
   </footer>
 </body>
